@@ -1451,6 +1451,9 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
 		[propget, id(DISPID_OBJROT_Z), helpstring("property Rot and Tra 9")] HRESULT ObjRotZ([out, retval] float *pVal);
 		[propput, id(DISPID_OBJROT_Z), helpstring("property Rot and Tra 9")] HRESULT ObjRotZ([in] float newVal);
 
+		[propget, id(454), helpstring("property EdgeFactorUI")] HRESULT EdgeFactorUI([out, retval] float *pVal);
+		[propput, id(454), helpstring("property EdgeFactorUI")] HRESULT EdgeFactorUI([in] float newVal);
+
 		[propget, id(DISPID_Name), helpstring("property Name")] HRESULT Name([out, retval] BSTR *pVal);
 		[propput, id(DISPID_Name), helpstring("property Name")] HRESULT Name([in] BSTR newVal);
   		[propget, id(398), helpstring("property static rendering")] HRESULT EnableStaticRendering([out, retval] VARIANT_BOOL *pVal);
